--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,23 +1,35 @@
 #red{
   background-color: #ED462F;
+  width: 200px;
+  height: 200px;
 }
 
 #blue{
   background-color: #0048FB;
+  width: 200px;
+  height: 200px;
 }
 
 #yellow{
   background-color: #FFF835;
+  width: 50px;
+  height: 50px;
 }
 
 #purple{
   background-color: #752E80;
+  width: 100px;
+  height: 100px;
 }
 
 #black{
   background-color: #000000;
+  width: 50px;
+  height: 50px;
 }
 
 #green{
   background-color: #387804;
+  width: 100px;
+  height: 100px;
 }
