--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,18 +2,23 @@
   background-color: #ED462F;
   width: 200px;
   height: 200px;
+  position: relative;
+  left: 500px;
 }
 
 #blue{
   background-color: #0048FB;
   width: 200px;
   height: 200px;
+  position: relative;
+  left: 500px;
 }
 
 #yellow{
   background-color: #FFF835;
   width: 50px;
   height: 50px;
+  position: relative;
 }
 
 #purple{
