--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@
   height: 200px;
   position: relative;
   left: 500px;
+  margin-bottom: 12px;
 }
 
 #blue{
@@ -19,22 +20,33 @@
   width: 50px;
   height: 50px;
   position: relative;
+  bottom: 50px;
+  left: 50px;
 }
 
 #purple{
   background-color: #752E80;
   width: 100px;
   height: 100px;
+  position: relative;
+  left: 50px;
+  top: 50px;
 }
 
 #black{
   background-color: #000000;
   width: 50px;
   height: 50px;
+  position: relative;
+  bottom: 100px;
+  left: 0;
 }
 
 #green{
   background-color: #387804;
   width: 100px;
   height: 100px;
+  position: relative;
+  left: 50px;
+  top: 50px;
 }
